Fix Forge/NeoForge config rewrite loop